[package]
name = "atomrust"
version = "0.1.0"
edition = "2021"

[dependencies]
oddity-rtsp-protocol = { path = "submodules/oddity-rtsp/oddity-rtsp-protocol" }
oddity-sdp-protocol = { path = "submodules/oddity-rtsp/oddity-sdp-protocol" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.1", default-features = false, features = [
    "codec",
] }
video-rs = "0.9.0"
#rslibcamlite = "0.1.2"
#tflite = "0.9.8"
